# TomoATT

./: .gitignore  CMakeLists.txt  README.md
.github/instructions/: tomoatt-build-harness.instructions.md  tomoatt-core-solver.instructions.md  tomoatt-inputs-examples.instructions.md
.github/scripts/: check_simd_efficiency.py  run_test.sh
.github/workflows/: CI.yml  simd-efficiency.yml
examples/eg1_seismic_tomography/: README.md  plot_output.py  run_this_example.sh
examples/eg2_earthquake_location/: README.md  plot_output.py  prepare_input_files.py  run_this_example.sh
examples/eg3_joint_inversion/: README.md  plot_output.py  run_this_example.sh
examples/eg4_1d_inversion/: plot_output.py  prepare_input_files.py  run_this_example.sh
examples/eg_japan_initial_model/: analyze_model.ipynb  input_params.yaml  plot_model.py  run.sh  test_small.yaml
examples/realcase1_regional_tomography_California/: README.md  run_this_example.sh
examples/realcase2_teleseismic_tomography_Thailand/: README.md  run_this_example.sh
examples/realcase3_regional_tomography_Turkey/: README.md  plot_output.py  run_this_example.sh
examples/scripts_of_generate_community_model/: 1_crust1.0_ak135_model.ipynb  1_crust1.0_ak135_model.py  ak135.h5  run_this_example.sh
examples/scripts_of_generate_hdf5_model/: 1_generate_models.py  2_plot_models.py  run_this_example.sh
examples/scripts_of_plotting/: 1_plot_model.py  2_plot_time_field.py  3_plot_kernel.py
examples/utils/: functions_for_data.py
external_libs/: CMakeLists.txt  yaml-cpp-cstdint.patch
include/: config.h  grid.h  input_params.h  interface.h  io.h  iterator.h  iterator_legacy.h  iterator_level.h  iterator_selector.h  kernel.h  kernel_normalization.h  kernel_postprocessing.h  kernel_smooth.h  lbfgs.h  main_routines_calling.h  main_routines_earthquake_relocation.h  main_routines_inversion_mode.h  model_optimization_routines.h  model_update.h  mpi_funcs.h  objective_function_utils.h  oneD_inversion.h  optimizer.h  optimizer_bfgs.h  optimizer_gd.h  receiver.h  smooth.h  src_rec.h  utils.h  vectorized_sweep.h  version.h.in
plans/: reflections.md
src/: TOMOATT.cxx  eikonal_solver_2d.cpp  grid.cpp  input_params.cpp  interface.cpp  inv_grid.cpp  io.cpp  iterator.cpp  iterator_level.cpp  kernel_normalization.cpp  kernel_postprocessing.cpp  kernel_smooth.cpp  oneD_inversion.cpp  optimizer.cpp  optimizer_bfgs.cpp  optimizer_gd.cpp  receiver.cpp  src_rec.cpp
test/: plot_time.ipynb
test/inversion_small/: make_test_model.py
test/reflection_test/: README.md  check_residuals.py  input_params.yaml  input_params_benchmark.yaml  input_params_surface.yaml  make_benchmark_model.py  make_surface_test.py  make_test_model.py  params_log.yaml  plot_reflection_test.ipynb  time.txt  (+2 more)
utils/: make_model_etopo_crust1.py
(+31 files in other folders)
